--- a/invitacion_ricardo80/style.css
+++ b/invitacion_ricardo80/style.css
@@ -44,6 +44,8 @@ body {
     border-radius: 10px;
     border: 1px white solid;
     backdrop-filter: blur(3px);
+    padding-left: 4px;
+    padding-right: 4px;
 }
 
 #overlay {
